--- a/bootstrap/bootstrap-social-gh-pages/package.json
+++ b/bootstrap/bootstrap-social-gh-pages/package.json
@@ -7,7 +7,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "bootstrap": "~3",
+    "bootstrap": "4.1.2",
     "font-awesome": "~4.7"
   }
 }
